# DF_TODO-API

./: .gitignore  LICENSE  README.md  pyproject.toml
src/api/enums/: request.py
src/api/managers/: base.py  user.py
src/api/migrations/: 0001_initial.py  0002_list_action.py
src/api/models/: __init__.py  action.py  base.py  list.py  user.py
src/api/routers/: action.py  list.py
src/api/serializers/: __init__.py  action.py  list.py
src/api/serializers/auth/: __init__.py  login.py  register.py
src/api/tests/test_models/: test_action.py  test_list.py
src/api/tests/test_serializers/: test_action.py
src/api/urls/: __init__.py  auth.py  v1.py
src/api/views/: action.py  list.py
src/api/views/auth/: __init__.py  login.py  logout.py  register.py
src/auths/: models.py  serializers.py  urls.py  utils.py  views.py
src/auths/migrations/: 0001_initial.py  0002_remove_user_email_remove_user_first_name_and_more.py
src/core/: env.py  models.py  renderers.py  settings.py  urls.py
src/core/openapi/: __init__.py  schema.py  serializers.py  utils.py
src/core/tests/: test_env.py  test_renderers.py
src/core/tests/openapi/: test_utils.py
src/deployment/: render_build.sh
src/lists/: models.py  routers.py  urls.py  views.py
src/lists/migrations/: 0001_initial.py  0002_alter_action_deadline.py  0003_list_session_list_user.py
src/lists/serializers/: __init__.py  action.py  list.py
src/lists/tests/: test_models.py
src/lists/tests/test_serializers/: test_action.py
